Fixed run configuration for Java 16+.